# voyageai

./: AGREEMENTS.md  CHANGELOG.md  Cargo.toml  README.md
docs/src/: ARCHITECTURE.md  EMBEDDINGS.md
src/: errors.rs  lib.rs  main.rs  utils.rs
src/builder/: embeddings.rs  voyage.rs
src/client/: embeddings_client.rs  mod.rs  rerank_client.rs  search_client.rs  voyage_client.rs
src/config/: voyage_config.rs
src/models/: ast.rs  code.rs  embeddings.rs  mod.rs  rerank.rs  search.rs
src/traits/: llm.rs  voyage.rs
tests/: integration_test.rs  test_client.rs  test_embed.rs  test_embeddings_similarity.rs  test_model_type.rs  test_rerank.rs  test_search_client.rs
