[package]
name = "voyageai"
description = "Voyage AI command line interface and SDK"
version = "0.1.0"
edition = "2021"
authors = ["David Maple <david@parallm.dev"]
license = "MIT"
repository = "https://github.com/parallm/voyageai-rust"
homepage = "https://docs.voyageai.rust"
keywords = ["voyageai", "ai", "embeddings", "search", "cli"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.35", features = ["derive"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# async-trait is banned as per conventions
log = "0.4.27"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
pin-project-lite = "0.2.16"
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"

[dev-dependencies]
mockito = "1.7.0"
dotenvy = "0.15.7"
mockall = "0.13.1"
once_cell = "1.21.3"
tokio = { version = "1.44.2", features = ["full", "test-util"] }
approx = "0.5.1"
lazy_static = "1.5.0"
